# trunk-demo

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
js/: index.js
src/: lib.rs
