[package]
name = "trunk_demo"
version = "0.0.1"
edition = "2021"
publish = false
license = "MIT"
readme = "Readme.md"
include = [
  "/src",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = []

[lib]
name = "web"
crate-type = [ "cdylib" ]
path = "./src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.79"

[profile.release]
opt-level = "z" # optimize for small code size aggressively.
lto = true # link-time optimization
panic = "abort" # abort immediately rather than unwind
codegen-units = 1 # improves optimization, but decrease compile time
# strip = "symbols" # strip symbols

[profile.release.package."*"]
opt-level = "z"